<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/AppTheme">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/md_theme_primary"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"> <!-- Added padding to ConstraintLayout -->

            <ImageButton
                android:id="@+id/goToFavs"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/favs_toolbar"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="boton_atras"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/to_do_list"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/goToFavs"
                app:layout_constraintEnd_toStartOf="@id/menuButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/menuButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_menu_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/boton_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/mainLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60sp"
        android:padding="15sp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10sp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/workToggle"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/work" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/personalToggle"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/personal" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/fitnessToggle"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fitness" />
        </com.google.android.material.button.MaterialButtonToggleGroup>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            app:srcCompat="@drawable/add"
            android:contentDescription="@string/boton_add_tarea"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item"
            android:layout_below="@+id/toggleButtons"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>